# collective-will

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  voice-phrases.json.example
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
deploy/: Caddyfile  README.md  deploy.sh  docker-compose.prod.yml  public.env.staging
docs/: faq-content.md  plan-whisperx-to-faster-whisper.md
docs/agent-context/: ACTIVE-action-plan.md  CONTEXT-shared.md
docs/decision-rationale/: voice-cloud-migration.md
docs/tickets/: deploy-failures-2025-03.md
migrations/versions/: 004_voice_verification.py  005_enrollment_audio.py
modal_functions/: voice_embedding.py
scripts/: check-telegram.sh  ci-deploy.sh  ci-voice.sh  push-env.sh  register-telegram-webhook.sh  test-voice-cloud.py  test-voice-modal.py  test-voice-transcription.py
src/: config.py
src/api/: main.py  rate_limit.py
src/channels/: base.py  telegram.py  types.py  whatsapp.py
src/db/: anchoring.py  evidence.py  verification_tokens.py
src/handlers/: commands.py  identity.py  intake.py  voting.py
src/models/: enrollment_audio.py  user.py
src/pipeline/: canonicalize.py  endorsement.py
src/voice/: audio.py  client.py  crypto.py  embedding.py  enrollment.py  errors.py  phrases.py  scoring.py  transcription.py  transcription_scoring.py  verification.py
tests/test_api/: test_analytics.py  test_auth.py  test_webhooks.py
tests/test_channels/: test_channel_base_types.py  (+1 more)
voice-service/: Dockerfile  requirements.txt
web/: Dockerfile  next.config.ts  package-lock.json  package.json
(+66 files in other folders)
