[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collective-will"
version = "0.1.0"
description = "Collective Will v0 backend and web stack"
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "asyncpg",
    "cryptography",
    "email-validator",
    "fastapi",
    "httpx",
    "numpy<2",
    "pgvector",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "scikit-learn",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "telethon>=1.42.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.sqlalchemy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
